tests/typing/fail/clock-03.stderr
error: Variable `c` is undefined.
 --> tests/typing/fail/clock-03.rs:8:33
  |
8 |         a : float = 3.0 whennot c;
  |                                 ^
